<resources>
    
	<!-- Main -->
    <string name="title_activity_kahosl">KaHoSL</string>
    <string name="app_name">KaHoSL</string>
    
    <!-- Tabs -->
    <string name="whats_recent">What\'s Recent?</string>
    <string name="agenda">Agenda</string>
    <string name="address_book">Adresboek</string>
    <string name="kdisk">K-Schijf</string>
    <string name="menu_settings">Instellingen</string>
    
	<!-- K-Schijf -->
    <string name="kdisk_back">Omhoog</string>
    <string name="kdisk_open">Openen</string>
    <string name="kdisk_delete">Verwijderen</string>
    <string name="kdisk_empty_dir">Lege map</string>
    
	<!-- Instellingen -->
	<string name="pref_login">E-mailadres</string>
	<string name="pref_login_desc">Het e-mailadres dat u gebruikt om aan te melden op KaHoSL.</string>
	<string name="login_domain">\@kahosl.be</string>
	
    <string name="pref_pass">Wachtwoord</string>
    <string name="pref_pass_desc">Het wachtwoord dat u gebruikt om aan te melden op KaHoSL.</string>

	<string name="pref_update_flag">Mededelingen worden elke 5 minuten ververst.</string>
	<string name="background_update_key">background_update_key</string>
    <string name="pref_update_flag_title">Periodieke updates</string>
    <string name="pref_whatsrecent_url">Toledo link</string>
    <string name="pref_whatsrecent_url_desc">De url die je op Toledo kan terugvinden.</string>
    <string name="pref_whatsrecent_url_default"></string>
    
    <!-- Whats recent -->
    <string name="refresh">Vernieuwen</string>
    <string name="delete">Verbergen</string>
    <string name="settings">Settings</string>
    <string name="showall">Toon alles</string>
    <string name="filter">Filter</string>
	<string name="addtocalendar">Toevoegen aan kalender</string>
	
	<!--  Agenda -->
	<string name="addEvent">Event Toevoegen</string>
	<string name="viewEvent">Event Bekijken</string>
	<string name="listEvent">Eventlijst Inzien</string>
	<string name="agendaHeader">Header</string>
	<string name="agendaNext">Volgende Maand</string>
	<string name="agendaPrev">Vorige Maand</string>
	
	<!-- Kalender Header -->
	<string name="agendaSun">Zon</string>
	<string name="agendaMon">Ma</string>
	<string name="agendaTue">Di</string>
	<string name="agendaWed">Woe</string>
	<string name="agendaThu">Do</string>
	<string name="agendaFri">Vrij</string>
	<string name="agendaSat">Zat</string>
	
</resources>