<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    
    <PreferenceCategory android:title="Login gegevens">
        
        <EditTextPreference 
            android:title="@string/pref_login"
        	android:key="pref_login"
        	android:summary="@string/pref_login_desc"
        	android:defaultValue="@string/login_domain"	/>
        
        <EditTextPreference 
            android:title="@string/pref_pass"
        	android:key="pref_pass"
        	android:summary="@string/pref_pass_desc"
        	android:inputType="textPassword" />
        
    </PreferenceCategory>
    
    <PreferenceCategory android:title="Whats recent">
        <EditTextPreference 
            android:title="@string/pref_whatsrecent_url"
        	android:key="pref_whatsrecenturl"
        	android:summary="@string/pref_whatsrecent_url_desc"
        	android:defaultValue="@string/pref_whatsrecent_url_default"	/>
        <CheckBoxPreference
            android:summary="@string/pref_update_flag"
            android:title="@string/pref_update_flag_title"
            android:key="background_update_key" />
    </PreferenceCategory>
    
</PreferenceScreen>