<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/refresh_menu_item"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh"
        android:showAsAction="always"></item>
    <item
        android:id="@+id/delete_menu_item"
        android:icon="@drawable/ic_menu_delete"
        android:title="@string/delete"
        android:showAsAction="always"></item>
    
    <item
        android:id="@+id/showall_menu_item"
        android:icon="@drawable/ic_menu_revert"
        android:title="@string/showall"
        android:showAsAction="always"></item>
    
    <item
        android:id="@+id/insertevent_menu_item"
        android:icon="@drawable/ic_menu_my_calendar"
        android:title="@string/addtocalendar"
        android:showAsAction="always"></item>
</menu>